# python-project-lvl1

./: .gitignore  .travis.yml  .travis.yml.swp  Makefile  README.md  makefile  pyproject.toml
brain_games/: cli.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain.py  brain_even.py  brain_games.py
kaktyzz_brain_games.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
