[tool.poetry]
name = "kaktyzz_brain_games"
version = "0.1.0"
description = ""
authors = ["Yakov <kaktyzz-imba@mail.ru>"]
packages = [
 { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

