[tool.poetry]
name = "kaktyzz_brain_games"
version = "0.1.8"
description = "Five brain-games by Yakov_Budarin"
authors = ["Yakov <kaktyzz-imba@mail.ru>"]
repository = ["pip install -i https://test.pypi.org/simple/ kaktyzz-brain-games"]
classifiers = [
    "Topic :: Games :: Libraries :: Python Modules"
]
packages = [
 { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-even = "brain_games.games.brain_even:main"
brain-calc = "brain_games.games.brain_calc:main"
brain-gcd = "brain_games.games.brain_gcd:main"
brain-progression = "brain_games.games.brain_progression:main"
brain-prime = "brain_games.games.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

